[gd_scene load_steps=5 format=3 uid="uid://ci5x07xbgg68j"]

[ext_resource type="Script" path="res://transformations.gd" id="1_6c8sa"]
[ext_resource type="PackedScene" uid="uid://dqwdrmf7pnjwg" path="res://alchemia.tscn" id="2_cyc43"]
[ext_resource type="Script" path="res://transformation_sprites.gd" id="3_dxevy"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xefdq"]

[node name="transformations" type="Node2D"]
script = ExtResource("1_6c8sa")

[node name="Alchemia" parent="." instance=ExtResource("2_cyc43")]

[node name="left" type="Button" parent="."]
offset_left = 146.0
offset_top = 269.0
offset_right = 252.0
offset_bottom = 384.0
text = "Left"

[node name="right" type="Button" parent="."]
offset_left = 869.0
offset_top = 263.0
offset_right = 975.0
offset_bottom = 378.0
text = "Right"

[node name="transformation_sprites" type="Sprite2D" parent="."]
position = Vector2(572, 327)
scale = Vector2(384, 641.5)
texture = SubResource("PlaceholderTexture2D_xefdq")
script = ExtResource("3_dxevy")

[connection signal="beast1_transformation" from="." to="Alchemia" method="_on_transformations_beast_1_transformation"]
[connection signal="beast2_transformation" from="." to="Alchemia" method="_on_transformations_beast_2_transformation"]
[connection signal="beast3_transformation" from="." to="Alchemia" method="_on_transformations_beast_3_transformation"]
[connection signal="transformed" from="." to="Alchemia" method="_on_transformations_transformed"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
